# build-infra

./: .gitignore  README.md
ansible/inventories/: README.md
ansible/macosx/: .gitignore
ansible/nexus-server/: README  inventory  nexus-configure.yml  playbook.yml
ansible/playbooks/: circleci.yml  go  linux-cv.yml  nfs-remount.yml
ansible/windows/: README.md
ansible/xen/: README.md
apple/notarizer/: README.md  couchbase.entitlement  go.sh  index.js  logger.js  package.json
apple/tools/: README.md  download_xcode.sh  xcv
blackduck/: backup_blackduck.sh
build_database/: README.md  build_db_conf.ini.example  build_db_loader_conf.ini.example  load_build_database  pyproject.toml  requirements.txt  setup.cfg  setup.py
build_database/build_database/: build_db_loader_conf.ini.example  version.py
build_database/build_database/modules/: README.md  add_author_to_commit.py
build_database/build_database/restapis/: build_database_restapis.py
build_database/build_database/scripts/: generate_projects.py  jira_commenter.py  load_build_database.py  regenerate_repositories.py  update_build_database.py
build_database/build_database/tools/: build_diff.py
build_database/jenkins/: run_load_build_database.sh
builddb_rest/: .dockerignore  .gitignore  Dockerfile  README.rst  builddb_rest.ini.example  go  pyproject.toml  requirements.txt  setup.py
builddb_rest/builddb_rest/: __init__.py  build_repos.py  builds.py  changeset.py  commits.py  cors.py  couch_db.py  metadata.py  proddata.py  product_version_builds.py  product_versions.py  products.py  projects.py  releases.py  reservations.py  urls.py  version.py  versions.py
builddb_rest/builddb_rest/util/: build_diff.py  db.py
builddb_rest/scripts/: builddb_rest_start.sh
cleanup/nas/: README.md  clean_nas.py  patterns.yaml  pyproject.toml
docker/: README.md
docker-scripts/: README.md  restart_jenkinsdocker.py
docker-scripts/cv/: restart_cv_lightweight.sh
docker-scripts/mobile/: restart_android.sh  restart_ansible.sh  restart_clamav.sh  restart_litecore.sh  restart_sgw_jenkins.sh  restart_zz_lightweight.sh
docker-scripts/operator/: restart_operator.sh
docker-scripts/server/: restart_all_server_mega1.sh  restart_all_server_mega2.sh  restart_all_server_mega3.sh  restart_analytics.sh  restart_suse.sh  restart_suse_2.sh
docker-stacks/: README.md
docker-stacks/analytics/: analytics-jenkins-agents.yml  analytics-jenkins.yaml  go  go-jenkins
docker-stacks/athens/: athens.yaml  go
docker-stacks/blackduck-agent/: blackduck-agent.yml  go
docker-stacks/builddb_rest/: builddb_rest.yaml  go
docker-stacks/buildx/: buildx.yml  go
docker-stacks/changelog_frontend/: changelog.yaml  go
docker-stacks/clamav/: clamav.yml  go
docker-stacks/couchbase-server/: cv-jenkins-buildslaves.yml  go  go-jenkins  server-jenkins-agents.yaml  server-jenkins-buildslaves.yml  server-jenkins.yaml
docker-stacks/cv/: cv-jenkins-agents.yml  cv-jenkins.yaml  go  go-jenkins  go-unittests  unittest-agents.yml
docker-stacks/defectdojo/: defectdojo.yml  env  go
docker-stacks/docker_registry/: docker-registry.yaml  go
docker-stacks/maven_cache/: .dockerignore  cache.yml  go
docker-stacks/mobile/: go  go-jenkins  mobile-jenkins-agents.yaml  mobile-jenkins.yaml  mobile.yml
docker-stacks/nexus-cache/: nexus-cache.yaml
docker-stacks/operator/: go  operator.yml
docker-stacks/pathdiff/: README.md  docker-compose.override.yml  docker-compose.yml  go
docker-stacks/profiledata/: go  profiledata.yaml
docker-stacks/python/: go  python-buildslaves.yml
docker-stacks/reverse-proxy/: README.md  go  traefik-config.yaml  traefik.yaml
docker-stacks/sdk/: go  go-jenkins  sdk-jenkins-agents.yaml  sdk-jenkins-slaves.yaml  sdk-jenkins.yaml
docker-stacks/testing-cv/: go-jenkins  testing-cv-jenkins.yaml
docker-stacks/toolserver/: go  toolserver.yaml
docker-stacks/xen-orchestra/: go  xen-orchestra.yaml
infradb/: pyproject.toml  requirements.txt  servers.yaml.example  setup.py
infradb/infradb/: XenAPI.py
infradb/infradb/scripts/: update_system_info.py
manifest/: info.py  parse.py
monitoring/: restart_hard_buildboard.sh
packer/xcp-debian/: go  (+5 more)
release/: clean_docker_registry.sh  clean_old_nas.sh  rc-build-retention.sh
restore-testing/: README.md  go.sh
util/: db.py  git.py
(+1075 files in other folders)
