[metadata]
name = build_database
version = 1.6.0
author = Couchbase Build Team
author_email = build-team@couchbase.com
description = Couchbase Build Team build database commands package
license = Apache License, Version 2.0
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Programming Language :: Python :: 3.6
    Topic :: Database :: Front-Ends

[options]
zip_safe = False
python_requires = >=3.6, <4
packages = find:
install_requires =
    cbbuild-database @ https://github.com/ceejatec/python-couchbase-commons/archive/refs/heads/master.tar.gz#subdirectory=cbbuild-database
    cbbuild-manifest @ https://github.com/ceejatec/python-couchbase-commons/archive/refs/heads/master.tar.gz#subdirectory=cbbuild-manifest
    cbbuild-util @ https://github.com/ceejatec/python-couchbase-commons/archive/refs/heads/master.tar.gz#subdirectory=cbbuild-util
    jira
    flask

[options.entry_points]
console_scripts =
    load_build_database = build_database.scripts.load_build_database:main
    jira_commenter = build_database.scripts.jira_commenter:main
    add_commit_history = build_database.scripts.add_commit_history:main
    regenerate_repositories = build_database.scripts.regenerate_repositories:main

[bdist_wheel]
universal = 1
