[project]
name = "infradb"
version = "0.1.0"
description = "Utilities to manage build inventory database"
authors = [
    { name = "Couchbase Build Team", email = "build-team@couchbase.com" }
]
license = { text = "Apache license" }
dependencies = [
    "docker",
    "PyYAML",
    "cbbuild-database>=0.8.1"
]
readme = "README.md"
requires-python = ">= 3.10, < 3.11"

[project.scripts]
update_system_info = "infradb.scripts.update_system_info:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["infradb"]